# fluenc

./: .Dockerfile.kate-swp  .clang-format  .gitignore  AllIterator.cpp  AllIterator.h  ArraySink.cpp  ArraySink.h  BlockStackFrame.cpp  BlockStackFrame.h  CMakeLists.txt  CallContext.cpp  CallContext.h  CompilerException.cpp  CompilerException.h  DebugPrinter.cpp  DebugPrinter.h  DefaultPrototypeProvider.cpp  DefaultPrototypeProvider.h  Dockerfile  DzArgument.cpp  DzArgument.h  DzArrayContinuation.cpp  DzArrayContinuation.h  DzArrayElement.cpp  DzArrayElement.h  DzArrayInit.cpp  DzArrayInit.h  DzAssignment.cpp  DzAssignment.h  DzBaseArgument.h  DzBinary.cpp  DzBinary.h  DzBinaryNg.cpp  DzBinaryNg.h  DzBlockInstruction.cpp  DzBlockInstruction.h  DzBooleanLiteral.cpp  DzBooleanLiteral.h  DzCallNg.cpp  DzCallNg.h  (+168 more)
code-generation/: BaseValue.h  CMakeLists.txt  CompilerException.cpp  CompilerException.h  DzResult.h  Emitter.cpp  Emitter.h  EntryPoint.cpp  EntryPoint.h  FunctionHelper.cpp  FunctionHelper.h  IRBuilderEx.cpp  IRBuilderEx.h  InteropHelper.cpp  InteropHelper.h  Stack.cpp  Stack.h  Type.h  TypeCompatibilityCalculator.cpp  TypeCompatibilityCalculator.h  ValueHelper.cpp  ValueHelper.h  ValueMetadata.h  base_generator.hpp  base_value.hpp  comfy_stack.hpp  emitter.cpp  emitter.hpp  entry_point.cpp  entry_point.hpp  fragment.hpp  function_helper.cpp  function_helper.hpp  interop_helper.cpp  interop_helper.hpp  ir_builder.cpp  ir_builder.hpp  transfer_strategy.hpp  type.cpp  type.hpp  (+9 more)
code-generation/exceptions/: AmbiguousFunctionException.cpp  AmbiguousFunctionException.h  BinaryTypeMismatchException.cpp  BinaryTypeMismatchException.h  FunctionNotFoundException.h  InvalidArgumentTypeException.h  InvalidFunctionPointerTypeException.cpp  InvalidOperatorException.h  MissingDefaultValueException.cpp  MissingFieldException.h  MissingTailCallException.h  UndeclaredIdentifierException.cpp  UndeclaredIdentifierException.h  ambiguous_function_exception.cpp  ambiguous_function_exception.hpp  binary_type_mismatch_exception.cpp  binary_type_mismatch_exception.hpp  compiler_exception.cpp  compiler_exception.hpp  function_not_found_exception.cpp  function_not_found_exception.hpp  invalid_argument_type_exception.cpp  invalid_argument_type_exception.hpp  invalid_function_pointer_type_exception.cpp  invalid_function_pointer_type_exception.hpp  invalid_operator_exception.cpp  invalid_operator_exception.hpp  invalid_type_exception.cpp  invalid_type_exception.hpp  missing_default_value_exception.cpp  missing_default_value_exception.hpp  missing_field_exception.cpp  missing_field_exception.hpp  missing_tail_call_exception.cpp  missing_tail_call_exception.hpp  missing_type_declaration_exception.cpp  missing_type_declaration_exception.hpp  undeclared_identifier_exception.cpp  undeclared_identifier_exception.hpp  unknown_type_exception.cpp  (+1 more)
code-generation/fragments/: AggregateIteratorValue.cpp  AggregateIteratorValue.h  AllocatorNode.cpp  AllocatorNode.h  ArrayContinuationFragment.cpp  ArrayContinuationFragment.h  ArrayElementNode.cpp  ArrayElementNode.h  ArrayValue.cpp  ArrayValue.h  ArrayValueProxy.cpp  ArrayValueProxy.h  IteratableNode.cpp  IteratableNode.h  IteratorValue.cpp  IteratorValue.h  Pod.cpp  Pod.h  RenderedNode.h  StaticNode.cpp  StaticNode.h  aggregate_iterator_element_fragment.cpp  aggregate_iterator_element_fragment.hpp  aggregate_iterator_fragment.cpp  aggregate_iterator_fragment.hpp  array_binary_fragment.cpp  array_continuation_fragment.cpp  array_continuation_fragment.hpp  array_element_fragment.cpp  array_element_fragment.hpp  array_iterator_fragment.cpp  array_iterator_fragment.hpp  array_sink_fragment.cpp  array_sink_fragment.hpp  array_unary_fragment.cpp  binary_fragment.hpp  boolean_unary_fragment.cpp  continuation_fragment.cpp  continuation_fragment.hpp  default_fragment.cpp  (+37 more)
code-generation/generators/: aggregate_iterator_generator.cpp  aggregate_iterator_generator.hpp  array_iterator_generator.cpp  array_iterator_generator.hpp  iterator_generator.cpp  iterator_generator.hpp  string_iterator_generator.cpp  string_iterator_generator.hpp
code-generation/iterators/: void_iterator.hpp
code-generation/metadata/: BufferValueMetadata.cpp  BufferValueMetadata.h  ExpandableValueMetadata.cpp  ExpandedLazyValueMetadata.cpp  FunctionValueMetadata.h  IteratorMetadata.cpp  IteratorMetadata.h  LazyValueMetadata.cpp  PlaceholderValueMetadata.cpp  ScalarValueMetadata.cpp  TupleValueMetadata.cpp  UserTypeValueMetadata.cpp  WithoutValueMetadata.h  buffer_value_metadata.cpp  buffer_value_metadata.hpp  expandable_value_metadata.cpp  expandable_value_metadata.hpp  expanded_lazy_value_metadata.cpp  expanded_lazy_value_metadata.hpp  expanded_value_metadata.cpp  expanded_value_metadata.hpp  function_value_metadata.cpp  function_value_metadata.hpp  indexed_value_metadata.cpp  indexed_value_metadata.hpp  iterator_metadata.cpp  iterator_metadata.hpp  lazy_value_metadata.cpp  lazy_value_metadata.hpp  named_value_metadata.cpp  named_value_metadata.hpp  scalar_value_metadata.cpp  (+13 more)
fcc/: BuildConfiguration.h  CMakeLists.txt  ProjectFileParser.cpp  ProjectFileParser.h  fluenc.peg  main.cpp
fluenc-lang/: CMakeLists.txt  DecoratedIteratorStorage.cpp  DecoratedIteratorStorage.h  DefaultPrototypeProvider.h  DummyIteratorStorage.cpp  DzTupleArgument.h  DzTypeName.cpp  DzTypeName.h  Emitter.cpp  EntryPoint.cpp  FunctionHelper.cpp  FunctionHelper.h  FunctionNotFoundException.cpp  FunctionNotFoundException.h  FunctionTypeName.cpp  FunctionTypeName.h  IIteratorStorage.h  IPrototypeProvider.h  IRBuilderEx.cpp  IRBuilderEx.h  ITransferStrategy.h  Indexed.h  InteropHelper.cpp  InteropHelper.h  IteratorStorage.cpp  Node.cpp  Type.h  TypeCompatibilityCalculator.cpp  TypeCompatibilityCalculator.h  Utility.cpp  ValueHelper.cpp  ValueHelper.h  Visitor.cpp  WithPrototypeProvider.cpp  ast.hpp  ast_transformer.cpp  ast_transformer.hpp  comfy_stack.hpp  expression.hpp  fluenc.peg  (+4 more)
incbin/: CMakeLists.txt
test/: CMakeLists.txt  KaleidoscopeJIT.h  TestHelpers.h  Tests.h  main.cpp  test_helpers.hpp  utility.cpp  utility.hpp
(+1082 files in other folders)
